[gd_scene load_steps=6 format=3 uid="uid://fhs47nerrpl3"]

[ext_resource type="Script" path="res://scenes/base_level.gd" id="1_jqvki"]
[ext_resource type="MeshLibrary" uid="uid://d1lw1c0k6a22o" path="res://tileset/Tileset1.tres" id="3_blwco"]

[sub_resource type="PlaneMesh" id="PlaneMesh_mdtyq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6ubur"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_enp5q"]
points = PackedVector3Array(-1, 0, -1, -1, 0, 1, 1, 0, -1, 1, 0, 1)

[node name="BaseLevel" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0419149, 0.288012, 0.248558)
script = ExtResource("1_jqvki")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="GridMap" type="GridMap" parent="NavigationRegion3D"]
mesh_library = ExtResource("3_blwco")
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, 0.707107, 3.09086e-08, 0, -4.37114e-08, 1, 0.707107, -0.707107, -3.09086e-08, 0.438397, 6.16884, -2.46832)

[node name="Enemies" type="Node3D" parent="."]

[node name="Drops" type="Node3D" parent="."]

[node name="Void" type="StaticBody3D" parent="."]
transform = Transform3D(141.421, 0, 141.421, 0, 200, 0, -141.421, 0, 141.421, 0, -2.34668, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Void"]
mesh = SubResource("PlaneMesh_mdtyq")
skeleton = NodePath("../../NavigationRegion3D")
surface_material_override/0 = SubResource("StandardMaterial3D_6ubur")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Void"]
shape = SubResource("ConvexPolygonShape3D_enp5q")

[node name="DoorsPosition" type="Node3D" parent="."]

[node name="PlayerDetector" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Doors" type="Node3D" parent="."]

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
